MAJ composer.json pour déploiement

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "lorgouillousyann/ecoride",
+    "version": "1.0.0",
     "authors": [
         {
             "name": "Yann LORGOUILLOUS",
